force-app/main/default/objects/b3o__Document_Assignment__c/b3o__Document_Assignment__c.object-meta.xml
<CustomObject>
    <label>Document Assignment</label>
    <nameField>
        <displayFormat>DOC-A-{0}</displayFormat>
        <label>Document Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>