force-app/main/default/objects/b3o__Document_Assignment__c/fields/b3o__Active__c.field-meta.xml
<CustomField>
    <fullName>b3o__Active__c</fullName>
    <formula>AND(b3o__Hide_from_Candidate__c == false, NOT(ISBLANK(TEXT(b3o__Status__c))),  OR(ISNULL(b3o__Due_Date__c), b3o__Due_Date__c &gt;= Today()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>