force-app/main/default/objects/b3o__Document_Assignment__c/fields/b3o__Assignment_Message__c.field-meta.xml
<CustomField>
    <fullName>b3o__Assignment_Message__c</fullName>
    <label>Assignment Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>