force-app/main/default/objects/b3o__Document_Assignment__c/fields/b3o__Document_Pack__c.field-meta.xml
<CustomField>
    <fullName>b3o__Document_Pack__c</fullName>
    <label>Document Pack</label>
    <referenceTo>b3o__Document_Pack__c</referenceTo>
    <relationshipLabel>Document Assignments</relationshipLabel>
    <relationshipName>Document_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>