force-app/main/default/objects/b3o__Document_Assignment__c/fields/b3o__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>b3o__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>