force-app/main/default/objects/b3o__Document_Assignment__c/fields/b3o__Hide_from_Candidate__c.field-meta.xml
<CustomField>
    <fullName>b3o__Hide_from_Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the document pack will not be visible to the candidate.</inlineHelpText>
    <label>Hide from Candidate</label>
    <type>Checkbox</type>
</CustomField>