force-app/main/default/objects/b3o__Document_Assignment__c/fields/b3o__X3B_Placement__c.field-meta.xml
<CustomField>
    <fullName>b3o__X3B_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3B Placement</label>
    <referenceTo>b3o__Placement__c</referenceTo>
    <relationshipLabel>Document Assignments</relationshipLabel>
    <relationshipName>Document_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>